# surfgeo-python-aireferral-sdk

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
docs/: API.md  EXAMPLES.md  TROUBLESHOOTING.md
examples/fastapi_example/: main.py
examples/flask_example/: app.py
examples/generic_wsgi/: app.py
surfgeo/: __init__.py  client.py  payload.py  types.py
surfgeo/middleware/: __init__.py  asgi.py  django.py  fastapi.py  flask.py  wsgi.py
tests/: __init__.py
tests/unit/: test_client.py  test_payload.py
