[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surfgeo-sdk"
version = "1.0.1"
description = "Server-side AI bot tracking SDK for Python"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    {name = "surfgeo", email = "support@surfgeo.com"}
]
keywords = ["surfgeo", "ai", "bot", "tracking", "analytics"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.0",
    "httpx>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/thebisontech/surfgeo-python-aireferral-sdk"
"Bug Tracker" = "https://github.com/thebisontech/surfgeo-python-aireferral-sdk/issues"
Documentation = "https://github.com/thebisontech/surfgeo-python-aireferral-sdk/blob/main/docs/README.md"

[project.optional-dependencies]
django = ["Django>=3.2"]
flask = ["Flask>=2.0"]
fastapi = ["fastapi>=0.95.0", "starlette>=0.26.0"]

dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.20",
    "pytest-cov>=4.0",
    "black>=22.0",
    "flake8>=5.0",
    "mypy>=1.0",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

